--- a/FrontEnd/ClientApp/src/app/team/team.component.html
+++ b/FrontEnd/ClientApp/src/app/team/team.component.html
@@ -148,13 +148,13 @@
 
           <!-- tab 2 -->
           <div class="tab-pane tabs-animation fade" id="tab-content-2" role="tabpanel">
-            <div class="row" style="background-color:green">
+            <div class="row">
               <table class="mb-0 table table-sm">
                 <tbody>
                   <tr *ngFor="let g of games">
-                    <td>{{g.round}} Giornata</td>
+                    <td class="text-center">{{g.round}}° Giornata</td>
                     <td class="text-right">{{g.teamHome}}</td>
-                    <td class="text-center">{{g.golHome}} - {{g.golAway}}</td>
+                    <td class="text-center">{{g.golTeamHome}} - {{g.golTeamAway}}</td>
                     <td class="text-left">{{g.teamAway}}</td>
                     <td>
                       <button type="button" id="btn-detail-team" class="btn btn-primary btn-sm" data-toggle="Dettaglio" (click)="detailGame(g.idGame)">
@@ -191,7 +191,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Errore/h5>
+        <h5 class="modal-title" id="errorModalTitle">Errore</h5>
         <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button> -->
@@ -203,7 +203,6 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="closeModal()">Close</button>
-        <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
       </div>
     </div>
   </div>
